--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.ts",
     "build": "rimraf dist && tsc",
-    "dev": "npx nodemon",
-    "start": "npm run build && node build/index.js",
-    "seed": "ts-node src/seed.ts"
-  },
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,7 +18,8 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
-    "rimraf": "^5.0.7",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
@@ -37,5 +38,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ]
 }
